# nebula

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.org  build.bat  build.ps1  build.rs  build.sh  espeak-ng.lib
.github/workflows/: ci.yml
backends/llama_cpp/llama-cpp/: Cargo.toml
backends/llama_cpp/llama-cpp-sys/: Cargo.toml  build.rs
backends/llama_cpp/llama-cpp-sys/src/: cpu.rs  lib.rs
backends/llama_cpp/llama-cpp-sys/src/cuda/: cudart.rs  mod.rs  nvcuda.rs  nvml.rs
backends/llama_cpp/llama-cpp/src/: clip.rs  context.rs  grammar.rs  lib.rs  llama_backend.rs  llama_batch.rs  llava.rs  model.rs  sample.rs  timing.rs  token.rs  token_type.rs
backends/llama_cpp/llama-cpp/src/context/: kv_cache.rs  params.rs  sample.rs  session.rs
backends/llama_cpp/llama-cpp/src/model/: params.rs
backends/llama_cpp/llama-cpp/src/model/params/: kv_overrides.rs
backends/llama_cpp/llama-cpp/src/token/: data.rs  data_array.rs
examples/: README.org  async_server.rs  basic.rs  basic_with_image.rs  embeddings.rs  llava_1_6.rs  nebula.rs  server.rs  text_to_image.rs  text_to_speech.rs  whisper.rs  whisper_on_wav.rs  whisper_stream.rs
examples/server/: Readme.org  main.rs
resource-path/: Cargo.toml
resource-path/src/: lib.rs
samples/: .gitignore
src/: error.rs  lib.rs  main.rs  model.rs  options.rs  text_generation.rs  token_output_stream.rs  utils.rs
src/backend/: embeddings.rs  llama.rs  mod.rs  text_to_image.rs  whisper.rs
src/backend/tts/: mod.rs  phonemizer.rs  text_cleaner.rs  treebank_word_tokenizer.rs
src/server/: config.rs  httplistener.rs  mod.rs
