[package]
name = "nebula"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
num_cpus = "1.0"
serde = { version = "1", features = [ "derive" ] }
strfmt = "*"
lazy_static="1.5"
resource-path = {path = "resource-path"}

#llama feature
llama-cpp = { path="backends/llama_cpp/llama-cpp", optional = true }

hf-hub = { version = "0.3.2" }
tracing-subscriber = "0.3.18"
tracing-chrome = "0.7.1"

thiserror = "1"
log = "0.4.17"

#whisper feature
hound = { version = "3.5.0", optional = true }
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs", rev = "9861dfdb939d1923beb65adad20acea74afb7a78", optional = true }
cpal = { version = "0.15.1", optional = true }
anyhow = { version = "1.0.70", optional = true }
rubato = { version = "0.15.0", optional = true }
simple_logger = "5"

#embeddings feature
candle-core = { version = "0.5.1", optional = true }
candle-transformers = { version = "0.5.1", optional = true }
candle-nn = { version = "0.5.1", optional = true }
candle-examples = { version = "0.5.1", optional = true }
serde_json = { version = "1.0.117", optional = true }
tokenizers = { version = "0.19.1", optional = true }
itertools = { version = "0.13.0", optional = true }

#TTS feature
espeakng-sys = { version = "0.2.0", optional = true }
fancy-regex = { version = "0.13.0", optional = true }
ffi-support = { version = "0.4.4", optional = true }
once_cell = { version = "1.19.0", optional = true }
punkt = { version = "1.0.5", optional = true }
regex = { version = "1.10.4", optional = true }
tch = { version = "0.12.0", optional = true }

[dev-dependencies]
hf-hub = "0.3.2"
indicatif = "0.17"

[features]
llama = ["llama-cpp"]
llama-build = ["llama-cpp?/build"]
#default = ["embeddings"]
whisper = ["whisper-rs", "hound", "cpal", "anyhow", "rubato"]
embeddings = ["candle-core", "candle-transformers", "candle-nn", "candle-examples", "tokenizers", "anyhow", "itertools", "serde_json"]
tts = ["anyhow", "espeakng-sys", "fancy-regex", "ffi-support", "hound", "once_cell", "punkt", "regex", "rubato", "tch"]


[[example]]
name = "basic"
required-features = ["llama"]

[[example]]
name = "basic_with_image"
required-features = ["llama"]

[[example]]
name = "whisper_on_wav"
required-features = ["whisper"]

[[example]]
name = "whisper_stream"
required-features = ["whisper"]

[[example]]
name = "embeddings"
required-features = ["embeddings"]

[[example]]
name = "text_to_speech"
required-features = ["tts"]
