[package]
name = "llama-cpp-sys"
version = "0.0.1"
edition = "2021"

include = [
    "build.rs",
    "/src",
    "/llama.cpp/ggml.c",
    "/llama.cpp/ggml.h",
    "/llama.cpp/ggml-alloc.c",
    "/llama.cpp/ggml-alloc.h",
    "/llama.cpp/ggml-backend.c",
    "/llama.cpp/ggml-backend.h",
    "/llama.cpp/ggml-backend-impl.h",
    "/llama.cpp/ggml-cuda.cu",
    "/llama.cpp/ggml-cuda.h",
    "/llama.cpp/ggml-impl.h",
    "/llama.cpp/ggml-metal.m",
    "/llama.cpp/ggml-metal.metal",
    "/llama.cpp/ggml-metal.h",
    "/llama.cpp/ggml-mpi.c",
    "/llama.cpp/ggml-mpi.h",
    "/llama.cpp/ggml-opencl.cpp",
    "/llama.cpp/ggml-opencl.h",
    "/llama.cpp/ggml-quants.c",
    "/llama.cpp/ggml-quants.h",
    "/llama.cpp/llama.cpp",
    "/llama.cpp/llama.h",
    "/llama.cpp/unicode.h",
    "/llama.cpp/unicode.cpp",
    "/llama.cpp/common/sampling.h",
    "/llama.cpp/common/sampling.cpp",
]

[dependencies]

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0.96"
glob = "0.3.1"

[features]
cublas = []
openblas = []
blis = []
sycl = []
hipblas = []
clblas = []
hip_uma = []
cuda_force_dmmv = []
no-metal = []
