[package]
name = "llama-cpp-sys"
version = "0.0.1"
edition = "2021"

[dependencies]
lazy_static = "1.4"
libloading = "0.8"
thiserror = "1"
log = "0.4"
glob = "0.3"
rust-embed = "8.4.0"
tempfile = "3.10"

[target.'cfg(macos)'.dependencies]
objc2-foundation = "0.2"

[target.'cfg(linux)'.dependencies]
procfs = "0.16"


[build-dependencies]
lazy_static = "1.4"
cmake = "0.1"
bindgen = "0.69.4"
maplit = "1"
powershell_script = "1"
glob = "0.3"

[features]
build = []
