[package]
name = "llama-cpp-sys"
version = "0.0.1"
edition = "2021"

[dependencies]
lazy_static = "1.4"
libloading = "0.8"
thiserror = "1"
log = "0.4"
glob = "0.3"
rust-embed = { version = "8.5.0" }
tempfile = "3.10"

[target.'cfg(target_os="macos")'.dependencies]
objc2-foundation = {version = "0.2", features = ["NSProcessInfo"]}
objc2-metal = {version = "0.2", features = ["MTLDevice"]}
iron-oxide = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"

[build-dependencies]
lazy_static = "1.4"
cmake = "0.1"
bindgen = "0.69.4"
maplit = "1"
powershell_script = "1"
glob = "0.3"

[features]
build = []
