[package]
name = "llama-cpp"
version = "0.0.1"
edition = "2021"

[dependencies]
llama-cpp-sys = { path = "../llama-cpp-sys" }
thiserror = "1"
tracing = "0.1"
log = "0.4.21"

[dev-dependencies]
hf-hub = "0.3.2"
criterion = "0.5.1"
pprof = { version = "0.13.0", features = ["criterion", "flamegraph"] }

[[bench]]
name = "grammar_bias"
harness = false

[[bench]]
name = "generate"
harness = false

[features]
cublas = ["llama-cpp-sys/cublas"]
clblas = ["llama-cpp-sys/clblas"]
openblas = ["llama-cpp-sys/openblas"]
blis = ["llama-cpp-sys/blis"]
hipblas = ["llama-cpp-sys/hipblas"]
no-metal = ["llama-cpp-sys/no-metal"]
