[package]
name = "llama-cpp"
version = "0.0.1"
edition = "2021"

[dependencies]
llama-cpp-sys = { path = "../llama-cpp-sys", optional = true }
thiserror = "1"
tracing = "0.1"
log = "0.4.21"
stdio-override = { git = "https://github.com/elichai/stdio-override.git", rev = "a6712588"}

[dev-dependencies]
hf-hub = "0.3.2"
criterion = "0.5.1"
pprof = { version = "0.13.0", features = ["criterion", "flamegraph"] }

[[bench]]
name = "grammar_bias"
harness = false

[[bench]]
name = "generate"
harness = false

[features]
default = ["llama-cpp-sys"]
build = ["llama-cpp-sys?/build"]
